--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,11 @@ yarn-error.log
 # System Files
 .DS_Store
 Thumbs.db
+/test-results/
+/playwright-report/
+/blob-report/
+/playwright/.cache/
+
+# Auth
+.auth/
+
