--- a/package.json
+++ b/package.json
@@ -34,8 +34,10 @@
     "@angular-devkit/build-angular": "^17.0.7",
     "@angular/cli": "^17.0.7",
     "@angular/compiler-cli": "17.0.7",
+    "@playwright/test": "^1.41.1",
     "@types/jasmine": "~4.3.0",
     "@types/marked": "^6.0.0",
+    "@types/node": "^20.11.5",
     "husky": "^8.0.3",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.1",
